--- a/task-manager-api/package.json
+++ b/task-manager-api/package.json
@@ -1,11 +1,24 @@
 {
+  "name": "task-manager-api",
+  "version": "1.0.0",
+  "description": "A simple RESTful CRUD API built with **Node.js**, **Express**, **MySQL**, and **Sequelize ORM**.   This project allows you to manage users and their tasks efficiently with full Create, Read, Update, and Delete functionality.",
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
